Wip: Añade un formulario y un modal de confirmación  pero a la hora de crear la oferta la transaccion de revierte a causa de la supoesta asencia de la address del token en la whitelist del contrato.

--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -158,6 +158,13 @@
   padding: 10px 5%;
   margin: 1%;
 }
+
+.input[type="radio"]:checked + label {
+  color: blue; /* Cambia esto al color que desees */
+
+  font-size: xx-large;
+}
+
 .containerApprove {
   /* width: 1500px; */
   display: flex;
